tdf#130483 prevent pasting cell exceeds the border.

When pasting a table onto another selected table,
cells are cloned from source to target including their
column span and row span. In the test case the
target table can accomodate the first cell of the
merged cells, while the rest go over the table boundary,
hence causing some exception later.

Change-Id: Iae78a9e1689571d4ea2f1ac4853f68c1f7dccb9c